fix(landing): removed horizontal scroll

--- a/frontend/src/assets/css/Login.css
+++ b/frontend/src/assets/css/Login.css
@@ -119,3 +119,11 @@ input:focus {
 .error {
   margin-top: -8px;
 }
+
+
+@media all and (max-width: 800px){
+  .form-wrapper {
+    margin-top: 5rem;
+    padding: 0;
+  }
+}
